--- a/livestockapp/templates/animal_profile/update_animal_profile.html
+++ b/livestockapp/templates/animal_profile/update_animal_profile.html
@@ -70,10 +70,14 @@
                 <div class="form-group row">
                   <label class="col-sm-2 col-form-label">Category</label>
                       <div class="autocomplete col-sm-4">
-                          <select name="category" id="category_id" class="form-control" value="{{ animal.category_id }}">
+                          <select name="category" id="category_id" class="form-control" >
            
-                  {% for y in animals %}
-                  <option  value="{{y.category_id}}">{{y.name}}</option>  
+                  {% for y in ani %}
+                            {% if animal.category_id == y.category_id %}
+                  <option  value="{{y.category_id}}" selected>{{y.name}}</option>  
+                  {% else %}
+                  <option  value="{{y.category_id}}">{{y.name}}</option> 
+                  {% endif %}
                  {% endfor %}
                 </select> </div>
               </div>
@@ -86,7 +90,7 @@
                 <div class="form-group row">
                   <label class="col-sm-2 col-form-label" for="purchased_on">Purchased Date:</label>
                   <div class="col-sm-4">
-                 <input type="text" class="form-control" name="purchased_on" value="{{animal.purchased_on}}" />
+                 <input type="date" class="form-control" name="purchased_on" value="{{animal.purchased_on|date:"Y-m-d"}}" />
                   </div>            
                 </div>
                 <div class="form-group row">
@@ -98,45 +102,57 @@
                 <div class="form-group row">
                   <label class="col-sm-2 col-form-label" for="date_of_birth">Date of Birth:</label>
                   <div class="col-sm-4">
-                 <input type="text" class="form-control" name="date_of_birth" value="{{animal.date_of_birth}}" />
+                 <input type="date" class="form-control" name="date_of_birth" value="{{animal.date_of_birth|date:"Y-m-d"}}" />
                   </div>            
                 </div>
+                
                 <div class="form-group row">
                   <label class="col-sm-2 col-form-label" for="gender">Gender:</label>
                   <div class="col-sm-4">
-		<select name="gender" class="form-control" required="required" id="gender" class="gender" value="{{animal.gender}}" >
-      <option value="">Select Gender</option>
-      <option value="male" >Male</option>
-      <option value="female">Female</option>
-    </select>
+                    <select name="gender" class="form-control" required="required" id="gender" class="gender" >
+                      {% if animal.gender == 'male' %}
+                        <option value="male" selected >Male</option>
+                      {% else  %}
+                      <option value="female" selected>Female</option>
+                      {% endif %}
+                    </select>
                   </div>            
                 </div>
+                
                 <div class="form-group row">
                   <label class="col-sm-2 col-form-label" for="is_pragnant">is Pragnent:</label>
                   <div class="col-sm-4">
-                    <input type="checkbox"  name="is_pragnant" id="is_pragnant" value="{{animal.is_pragnant}}">
-                    <input type="text"  name="pragnant_val" id="pragnant_val" value="0" hidden>
+                    {% if animal.is_pragnent == 1 %}
+                    <input type="checkbox" checked name="is_pragnant" id="is_pragnant" value="{{animal.is_pragnent}}">
+                    {% else %}
+                    <input type="checkbox"  name="is_pragnant" id="is_pragnant" value="{{animal.is_pragnent}}">
+                    {% endif %}
               
                   </div>            
                 </div>
                 <div class="form-group row">
                   <label class="col-sm-2 col-form-label" for="pragnancy_start_date">Pregnancy Start Date:</label>
                   <div class="col-sm-4">
-                 <input type="text" class="form-control" name="pragnancy_start_date" value="{{animal.pragnancy_start_date}}" />
+                 <input type="date" class="form-control" name="pragnancy_start_date" value="{{animal.pragnancy_start_date|date:"Y-m-d"}}" />
                   </div>            
                 </div>
                 <div class="form-group row">
                   <label class="col-sm-2 col-form-label" for="pragnancy_end_date">Pregnancy End Date:</label>
+ 
                   <div class="col-sm-4">
-                 <input type="text" class="form-control" name="pragnancy_end_date" value="{{animal.pragnancy_end_date}}" />
+                 <input type="date" class="form-control" name="pragnancy_end_date" value="{{animal.pragnancy_end_date|date:"Y-m-d"}}" />
                   </div>            
                 </div>
                 <div class="form-group row">
                   <label class="col-sm-2 col-form-label" for="status">is Active:</label>
                   <div class="col-sm-4">
                    
-                <input type="checkbox"  id="status" name="status" value="{{animal.status}}">
-                <input type="text"  id="status_val" name="status_val"  value="0" hidden>
+                
+                {% if animal.status == 1 %}
+                <input type="checkbox" checked id="status" name="status" value="{{animal.status}}">
+                    {% else %}
+                    <input type="checkbox"  id="status" name="status" value="{{animal.status}}">
+                    {% endif %}
        
                   </div>
                   
