--- a/livestockapp/templates/animal_profile/insert_animal_profile.html
+++ b/livestockapp/templates/animal_profile/insert_animal_profile.html
@@ -1,3 +1,10 @@
+<html>
+  <head>
+    <title>Animal Profile</title>
+  </head>
+<body>
+  
+
 {% extends 'navbar.html' %}
 {% block content %}
     {% if success %} 
@@ -61,152 +68,156 @@
   
   </script>
  
-<div class="container my-3">
-  <h4 class="  text-center alert alert-info">Add Category</h4>
+{% comment %} <div class="container my-3"> {% endcomment %}
+  <div class="alert alert-dark" role="alert"><b>Basic Info</b></div>
   <form action='/insert_animal_profile' method="POST" >
     {% if error2 %}
     <div class="alert alert-danger" role="alert">
       Please Enter Token No !!    
     </div>
-{% endif %}  
-{% if error3 %}
-<div class="alert alert-danger" role="alert">
-  Please Enter Name !!    
-</div>
-{% endif %} 
-{% if error4 %}
-<div class="alert alert-danger" role="alert">
-  Please Enter Color !!    
-</div>
-{% endif %} 
-{% if error5 %}
-<div class="alert alert-danger" role="alert">
-  Please Enter Category !!    
-</div>
-{% endif %} 
-{% if error6 %}
-<div class="alert alert-danger" role="alert">
-  Please Enter Gender!!    
-</div>
-{% endif %} 
+    {% endif %}  
+    {% if error3 %}
+    <div class="alert alert-danger" role="alert">
+      Please Enter Name !!    
+    </div>
+    {% endif %} 
+    {% if error4 %}
+    <div class="alert alert-danger" role="alert">
+      Please Enter Color !!    
+    </div>
+    {% endif %} 
+    {% if error5 %}
+    <div class="alert alert-danger" role="alert">
+      Please Enter Category !!    
+    </div>
+    {% endif %} 
+    {% if error6 %}
+    <div class="alert alert-danger" role="alert">
+      Please Enter Gender!!    
+    </div>
+    {% endif %} 
 
-{% if error8 %}
-<div class="alert alert-danger" role="alert">
-  Please Enter pragnancy_start_date !!    
-</div>
-{% endif %} 
-{% if error9 %}
-<div class="alert alert-danger" role="alert">
-  Please Enter is_Active Field !!    
-</div>
-{% endif %} 
+    {% if error8 %}
+    <div class="alert alert-danger" role="alert">
+      Please Enter pragnancy_start_date !!    
+    </div>
+    {% endif %} 
+    {% if error9 %}
+    <div class="alert alert-danger" role="alert">
+      Please Enter is_Active Field !!    
+    </div>
+    {% endif %} 
 
 
     {% csrf_token %}
-    
-    <div class="row align-center mb-3 col-sm">
-      <div class="from-group" style='margin-right:5%;'>
+    <div class="row">
+      <div class="col">
         <label class=" control-label">Token No :<span style="color:red; font-weight:bold;">*</span></label>
         <input type="text" class="form-control" id="token_no" name="token_no"  >
       </div>
-      <div class="from-group" style='margin-right:5%;'>
-        <label class=" control-label">Name :<span style="color:red; font-weight:bold;">*</span></label>
-        <input type="text" class="form-control" id="ani_name" name="ani_name"  >
+      <div class="col">
+          <label class=" control-label">Name :<span style="color:red; font-weight:bold;">*</span></label>
+          <input type="text" class="form-control" id="ani_name" name="ani_name"  >
       </div>
-      <div class="from-group" style='margin-right:5%;'>
+      <div class="col">
         <label class=" control-label">Color :<span style="color:red; font-weight:bold;">*</span></label>
         <input type="text" class="form-control" id="color" name="color"  >
       </div>
-      <div class="from-group" >
+      <div class="col">
         <label class=" control-label">Weight :</label>
         <input type="text" class="form-control" id="weight" name="weight"  >
       </div>
-   
-     <div class="from-group " style='margin-right:9%;'>
-        <label class="from-group my-3" >Category :<span style="color:red; font-weight:bold;">*</span></label>
-        <div class="autocomplete">
-      <select id="category_id" name="category_id"  class="form-control">
-        <option value="">Select Category</option>
-        {% for x in ani %}
-        <option value="{{x.category_id}}">{{x.name}}</option>  
-       {% endfor %}
-      </select> </div>
     </div>
-      <div class="from-group " style='margin-right:5%; margin-top:2%;'>
-        <label for="purchase_price my-5">Purchase Price :</label>
-        
+    
+    <div class="row">
+      <div class="col" >
+        <label class="from-group" >Category :<span style="color:red; font-weight:bold;">*</span></label>
+        <select id="category_id" name="category_id"  class="form-control">
+          <option value="">Select Category</option>
+          {% for x in ani %}
+          <option value="{{x.category_id}}">{{x.name}}</option>  
+        {% endfor %}
+        </select>
+      </div>
+      <div class="col" >
+        <label for="purchase_price ">Purchase Price :</label>
         <input type="text" class="form-control" id="purchase_price" name="purchase_price"  >
       </div>
-      <div class="from-group" style='margin-right:5%; margin-top:2%;'>
+      <div class="col" >
         <label for="purchased_date">Purchased Date :</label>
-        
         <input type="date" class="form-control" id="purchased_on" name="purchased_on" value="{{date}}" >
       </div>
     
-      <div class="from-group" style='margin-left:4%; margin-top:2%;'>
+      <div class="col" >
         <label for="purchased_by">Purchased By :</label>
         
         <input type="text" class="form-control" id="purchased_by" name="purchased_by"  >
       </div>
-   
-      <div class="from-group" style='margin-right:5%; margin-top:2%;'>
+    </div>
+    <div class="row">
+      <div class="col" >
         <label class=" control-label">Date of Birth :</label>
-        
         <input type="date" class="form-control" id="date_of_birth" name="date_of_birth" >
       </div>
-    
-      <div class="form-group" style='margin-left:3%; margin-top:2%;'>
-		<label class=" control-label">Gender : <span style="color:red; font-weight:bold;">*</span></label>
-		
-		<select onchange="changeDropdown(this.value);" name="gender" class="form-control" required="required" id="gender" class="gender">
-		<option value="">Select Gender</option>
-		<option value="male" >Male</option>
-		<option value="female">Female</option>
-  </select>
-  </div>
-    
-  
-  <div id ="hiddenFields1" style='margin-left:11%; margin-top:5%;'>
-    <div class="from-group" >
-      <label class=" control-label">is Pragnent :<span style="color:red; font-weight:bold;">*</span></label>
-      
-      <input type="checkbox"  name="is_pragnant" id="is_pragnant" >
-      <input type="text"  name="pragnant_val" id="pragnant_val" value="0" hidden>
-
+      <div class="col" >
+		    <label class=" control-label">Gender : <span style="color:red; font-weight:bold;">*</span></label>
+        <select onchange="changeDropdown(this.value);" name="gender" class="form-control" required="required" id="gender" class="gender">
+          <option value="">Select Gender</option>
+          <option value="male" >Male</option>
+          <option value="female">Female</option>
+        </select>
+      </div>
+      <div class="col" >
+      </div>
+      <div class="col" >
+      </div>
     </div>
-  </div>
-    <div id ="hiddenFields" style="margin-top:4%; margin-left:11%">
-      <div class="from-group" id="pragnancy_start_date" >
+
+    <div class="row">
+      <div id ="hiddenFields1" class='col'>
+        <label class=" control-label">is Pragnent :<span style="color:red; font-weight:bold;">*</span></label>
+        <input type="checkbox"  name="is_pragnant" id="is_pragnant" >
+        <input type="text"  name="pragnant_val" id="pragnant_val" value="0" hidden>
+      </div>
+    </div>
+
+    <div class="row" id="hiddenFields">
+      <div class="col"  >
+        <label for="pragnancy_end_date" class=" control-label" >Pregnancy End Date :</label>
+        <input type="date" class="form-control"  name="pragnancy_end_date" value="" >
+      </div>
+      <div  class="col">
         <label class=" control-label" >Pregnancy Start Date :<span style="color:red; font-weight:bold;">*</span></label>
         <input type="date" class="form-control"  name="pragnancy_start_date"  >
       </div>
-   
-      <div class="from-group" id="pragnancy_end_date" >
-        <label for="pragnancy_end_date" class=" control-label" >Pregnancy End Date :</label>
-        
-        <input type="date" class="form-control"  name="pragnancy_end_date" value="" >
+      <div class="col" >
+      </div>
+      <div class="col" >
       </div>
     </div>
-     <div class="from-group" style='margin-right:65%;'>
-      <label for="status" >is Active :<span style="color:red; font-weight:bold;">*</span></label>
-      
-     <input type="checkbox"  id="status" name="status">
-     <input type="text"  id="status_val" name="status_val"  value="0" hidden>
-     </div>    
-  </div>
-    <div class="from-group" style='margin-right:5%;'>
-      <label for="description" >Description :</label>
-      
-      <textarea id="description" class="form-control" name="description" rows="3" cols="50"></textarea>
-    </div>   
- 
+
+    <div class="row">
+      <div class="col" >
+        <label for="status" >is Active :<span style="color:red; font-weight:bold;">*</span></label>
+        <input type="checkbox"  id="status" name="status">
+        <input type="text"  id="status_val" name="status_val"  value="0" hidden>
+      </div>    
+    </div>
+    <div class="row">
+      <div class="col">
+        <label for="description" >Description :</label>
+        <textarea id="description" class="form-control" name="description" rows="3" cols="50"></textarea>
+      </div>
+    </div>
     <div>
-    <button type="submit" class="btn btn-success my-3" >Submit</button>  
+      <button type="submit" class="btn btn-success my-3" >Submit</button>  
     </div>
   </form>
-      </div>     
+          
       {% endblock content %}
 
 
 
     
+</body>
+</html>
