--- a/livestockapp/templates/navbar.html
+++ b/livestockapp/templates/navbar.html
@@ -59,7 +59,7 @@
   </div>
 </nav>
     
-<div class="container mt-5">
+<div class="container ">
     
     {% block content %}    {% endblock content %}
 
